# Backtester-

./: .gitignore  AUTHORING.md  HANDOVER.md  HANDOVER_PREPHASE0_TO_PHASE0.md  HANDOVER_SESSION2_TO_SESSION3.md  README.md  TRADELAB_CONTEXT.md  TRADELAB_MASTER_PLAN.md  pyproject.toml  tradelab-launch.bat  tradelab-launch.ps1  tradelab.yaml
configs/: seeds.yaml
docs/superpowers/: CALIBRATION_RETROSPECTIVE_2026-04-28.md  ENGINE_CALIBRATION_RECON_2026-04-23.md  FRONTEND_TEST_STRATEGY_DECISION.md  GAMEPLAN_validation_gaps.md  MECHANICAL_READINESS_2026-04-24.md  OPTION_H_HANDOFF_2026-04-24.md  OPTION_H_SESSION_2_COMPLETE_2026-04-24.md  OPTION_H_SESSION_3A_COMPLETE_2026-04-24.md  PART_2_SESSION_SUMMARY.md  POST_V1.5_STABILIZATION_SUMMARY.md  RESEARCH_TAB_V1.5_SUMMARY.md  RESEARCH_TAB_V1_SUMMARY.md  RESEARCH_TAB_V2_AUDIT.md  RESEARCH_TAB_V2_SUMMARY.md  RESEARCH_TAB_V3_HANDOFF_2026-04-30.md  RESEARCH_TAB_V3_HANDOFF_2026-04-30_AFTER_TASK_11.md  RESEARCH_TAB_V3_HANDOFF_2026-04-30_AFTER_TASK_14.md  RESEARCH_TAB_V3_HANDOFF_2026-04-30_AFTER_TASK_8.md  RESEARCH_TAB_V3_HANDOFF_2026-04-30_T15_PRE_SMOKE.md  RESUMPTION_PLAN_2026-04-28.md  SESSION_2026-04-23_HANDOFF.md  SESSION_2026-04-28_LITE_FOR_FLOW_A_SHIPPED.md  SESSION_2026-04-28_VALIDATION_REDESIGN_HANDOFF.md  SESSION_LOG_2026-05-31_validation-suite-to-paper-engine.md  (+1 more)
reports/: .gitkeep  calibration_retrospective_2026-04-28.json  canary_suite_readme.md  wf_fix_verification_2026-04-19.md
scripts/: gate-fast.ps1  gate.ps1  gate_confine.py  run_canaries.py
tests/: test_csv_scoring.py  test_env.py  test_registry_fuzzy.py
(+344 files in other folders)
